REGRESSION(272476@main): No ligatures across `content: "f" "i"` https://bugs.webkit.org/show_bug.cgi?id=282444 rdar://139079271

Reviewed by NOBODY (OOPS!).

Add some logic in RenderTreeUpdater to concatenate continuous text fragments into one fragment.

This restores the old behavior pre-272476@main, but other cases remain broken.

* LayoutTests/fast/text/pseudo-element-ligatures-expected.html: Added.
* LayoutTests/fast/text/pseudo-element-ligatures.html: Added.
* Source/WebCore/rendering/updating/RenderTreeUpdaterGeneratedContent.cpp:
(WebCore::createContentRenderers):